--- a/requirements.txt
+++ b/requirements.txt
@@ -36,22 +36,30 @@ jupyter-core==4.10.0
 keras==2.9.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.3
+lazy_loader==0.1rc2
 libclang==14.0.1
+littleutils==0.2.2
+lxml==4.9.1
 Markdown==3.3.7
 MarkupSafe==2.1.1
 matplotlib==3.5.2
 matplotlib-inline==0.1.3
+multitasking==0.0.11
 nest-asyncio==1.5.5
 numpy==1.22.4
 oauthlib==3.2.0
 openpyxl==3.0.10
 opt-einsum==3.3.0
+outdated==0.2.1
 packaging==21.3
 pandas==1.4.2
+pandas-flavor==0.3.0
 parso==0.8.3
+patsy==0.5.2
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.1.1
+pingouin==0.5.2
 prompt-toolkit==3.0.29
 protobuf==3.19.4
 psutil==5.9.1
@@ -72,6 +80,8 @@ seaborn==0.11.2
 six==1.16.0
 spyder-kernels==0.5.2
 SQLAlchemy==1.4.36
+statsmodels==0.13.2
+tabulate==0.8.10
 tensorboard==2.9.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
@@ -88,5 +98,7 @@ wcwidth==0.2.5
 Werkzeug==2.1.2
 wrapt==1.14.1
 wurlitzer==3.0.2
+xarray==2022.6.0
 xlrd==2.0.1
+yfinance==0.1.74
 zipp==3.8.0
